force-app/main/default/objects/Email_Engagement__e/Email_Engagement__e.object-meta.xml
<CustomObject>
    <label>Email Engagement</label>
    <pluralLabel>Email Engagements</pluralLabel>
    <description>Platform Event for email engagement tracking. Triggers webhook callout to Heroku for real-time stats.</description>
</CustomObject>