force-app/main/default/objects/Email_Engagement__e/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <label>Contact ID</label>
    <type>Text</type>
    <length>18</length>
</CustomField>