force-app/main/default/objects/Email_Engagement__e/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <label>Event Type</label>
    <type>Text</type>
    <length>50</length>
    <description>Type of engagement: open, click, bounce, unsubscribe</description>
</CustomField>