force-app/main/default/objects/Email_Engagement__e/fields/JourneyId__c.field-meta.xml
<CustomField>
    <fullName>JourneyId__c</fullName>
    <label>Journey ID</label>
    <type>Text</type>
    <length>50</length>
</CustomField>