force-app/main/default/objects/Email_Engagement__e/fields/LinkUrl__c.field-meta.xml
<CustomField>
    <fullName>LinkUrl__c</fullName>
    <label>Link URL</label>
    <type>Text</type>
    <length>255</length>
    <description>Clicked URL (for click events)</description>
</CustomField>