force-app/main/default/objects/Email_Engagement__e/fields/NodeId__c.field-meta.xml
<CustomField>
    <fullName>NodeId__c</fullName>
    <label>Node ID</label>
    <type>Text</type>
    <length>50</length>
</CustomField>