force-app/main/default/objects/Email_Engagement__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
    <description>When the engagement event occurred</description>
</CustomField>